fix details div

--- a/index.html
+++ b/index.html
@@ -36,13 +36,19 @@
         </div>
 
         <div class="details">
-          <p class="low">L <span class="low-temp">8</span>°</p>
-          <p class="high">H <span class="high-temp">20</span>°</p>
-          <img src="src/weather_icons/wind_flag.png" alt="wind flag" />
-          <p class="wind-speed">11kmph NW</p>
-          <br />
-          <img src="src/weather_icons/umbrella.png" alt="umbrella icon" />
-          <p class="rain-percent">36%</p>
+          <div class="labels">
+            <p class="low">L</p>
+            <p class="high">H</p>
+            <img src="src/weather_icons/wind_flag.png" alt="wind flag" />
+            <br />
+            <img src="src/weather_icons/umbrella.png" alt="umbrella icon" />
+          </div>
+          <div class="data">
+            <p class="low-temp"><span>8</span>°</p>
+            <p class="high-temp"><span>20</span>°</p>
+            <p class="wind-speed">11kmph NW</p>
+            <p class="rain-percentage"><span>36</span>%</p>
+          </div>
         </div>
       </div>
 
