--- a/index.html
+++ b/index.html
@@ -17,15 +17,19 @@
   </head>
   <body>
     <div class="main-box">
-      <h1 class="location">London, UK</h1>
-      <h2 class="date">Tuesday 16<sup>th</sup>, March</h2>
+      <header>
+        <div class="where-when">
+          <h1 class="location">London, UK</h1>
+          <h2 class="date">Tuesday 16<sup>th</sup>, March</h2>
+        </div>
 
-      <div class="search-location">
-        <button class="get-location-button">
-          <img src="src/get_location_icon.png" alt="map icon" />
-        </button>
-        <input type="text" placeholder="&#xF002; Search city" />
-      </div>
+        <div class="search-location">
+          <button class="get-location-button">
+            <img src="src/get_location_icon.png" alt="map icon" />
+          </button>
+          <input type="text" placeholder="&#xF002; Search city" />
+        </div>
+      </header>
 
       <div class="todays-weather">
         <div class="current-weather">
