--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
       href="https://fonts.googleapis.com/css2?family=Montserrat+Alternates:wght@100;600&display=swap"
       rel="stylesheet"
     />
+    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <title>Weather App</title>
   </head>
   <body>
@@ -109,5 +110,6 @@
         >Location icon by Icons8</a
       >
     </footer>
+    <script src="src/index.js"></script>
   </body>
 </html>
