get current weather information and display on click

--- a/index.html
+++ b/index.html
@@ -44,11 +44,11 @@
           <div class="grid-container">
             <div><p class="low label">L</p></div>
             <div>
-              <p class="low-temp data"><span>8</span>°</p>
+              <p class="low-temp data">8°</p>
             </div>
             <div><p class="high label">H</p></div>
             <div>
-              <p class="high-temp data"><span>20</span>°</p>
+              <p class="high-temp data">20°</p>
             </div>
             <div>
               <img
@@ -57,7 +57,7 @@
                 alt="wind flag"
               />
             </div>
-            <div><p class="wind-speed data">11kmph NW</p></div>
+            <div><p class="wind-speed data">11km/h NW</p></div>
             <div>
               <img
                 class="icon"
