update weather icon img

--- a/index.html
+++ b/index.html
@@ -34,7 +34,11 @@
 
       <div class="todays-weather">
         <div class="current-weather">
-          <img src="src/weather_icons/cloudy.png" alt="cloudy" />
+          <img
+            class="current-weather-img"
+            src="src/weather_icons/cloudy.png"
+            alt="weather_img"
+          />
           <p class="current-temp">16</p>
           <button class="celius-to-farenheit">°C</button>
           <p class="weather-description">Cloudy</p>
