--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <title>Weather App</title>
   </head>
   <body>
-    <div class="main-box">
+    <div class="main-box default-box">
       <header>
         <div class="where-when">
           <h1 class="location">London, UK</h1>
@@ -25,7 +25,7 @@
         </div>
 
         <div class="search-location">
-          <button class="get-location-button">
+          <button class="get-location-button default-button">
             <img src="src/get_location_icon.png" alt="map icon" />
           </button>
           <input type="text" placeholder="&#xF002; Search city" />
@@ -40,11 +40,11 @@
             alt="weather_img"
           />
           <p class="current-temp">16</p>
-          <button class="celius-to-farenheit">°C</button>
+          <button class="celius-to-farenheit default-button">°C</button>
           <p class="weather-description">Cloudy</p>
         </div>
 
-        <div class="details">
+        <div class="details default-box">
           <div class="grid-container">
             <div><p class="low label">L</p></div>
             <div>
@@ -77,27 +77,27 @@
       </div>
 
       <div class="future-forecast">
-        <div class="individual-forecast">
+        <div class="individual-forecast default-box">
           <p class="day">Wed</p>
           <img src="src/weather_icons/sunny.png" alt="sunny" />
           <p class="temp">12°</p>
         </div>
-        <div class="individual-forecast">
+        <div class="individual-forecast default-box">
           <p class="day">Thu</p>
           <img src="src/weather_icons/sunny.png" alt="sunny" />
           <p class="temp">12°</p>
         </div>
-        <div class="individual-forecast">
+        <div class="individual-forecast default-box">
           <p class="day">Fri</p>
           <img src="src/weather_icons/sunny.png" alt="sunny" />
           <p class="temp">12°</p>
         </div>
-        <div class="individual-forecast">
+        <div class="individual-forecast default-box">
           <p class="day">Sat</p>
           <img src="src/weather_icons/sunny.png" alt="sunny" />
           <p class="temp">12°</p>
         </div>
-        <div class="individual-forecast">
+        <div class="individual-forecast default-box">
           <p class="day">Sun</p>
           <img src="src/weather_icons/sunny.png" alt="sunny" />
           <p class="temp">12°</p>
