add function that gets average weather ID

--- a/index.html
+++ b/index.html
@@ -78,29 +78,53 @@
 
       <div class="future-forecast">
         <div class="individual-forecast default-box">
-          <p class="day">Wed</p>
-          <img src="src/weather_icons/sunny.png" alt="sunny" />
-          <p class="temp">12°</p>
+          <p class="forecast-day">Wed</p>
+          <img
+            src="src/weather_icons/sunny.png"
+            alt="sunny"
+            class="forecast-img"
+          />
+          <p class="forecast-temp">12°</p>
         </div>
+
         <div class="individual-forecast default-box">
-          <p class="day">Thu</p>
-          <img src="src/weather_icons/sunny.png" alt="sunny" />
-          <p class="temp">12°</p>
+          <p class="forecast-day">Thu</p>
+          <img
+            src="src/weather_icons/sunny.png"
+            alt="sunny"
+            class="forecast-img"
+          />
+          <p class="forecast-temp">12°</p>
         </div>
+
         <div class="individual-forecast default-box">
-          <p class="day">Fri</p>
-          <img src="src/weather_icons/sunny.png" alt="sunny" />
-          <p class="temp">12°</p>
+          <p class="forecast-day">Fri</p>
+          <img
+            src="src/weather_icons/sunny.png"
+            alt="sunny"
+            class="forecast-img"
+          />
+          <p class="forecast-temp">12°</p>
         </div>
+
         <div class="individual-forecast default-box">
-          <p class="day">Sat</p>
-          <img src="src/weather_icons/sunny.png" alt="sunny" />
-          <p class="temp">12°</p>
+          <p class="forecast-day">Sat</p>
+          <img
+            src="src/weather_icons/sunny.png"
+            alt="sunny"
+            class="forecast-img"
+          />
+          <p class="forecast-temp">12°</p>
         </div>
+
         <div class="individual-forecast default-box">
-          <p class="day">Sun</p>
-          <img src="src/weather_icons/sunny.png" alt="sunny" />
-          <p class="temp">12°</p>
+          <p class="forecast-day">Sun</p>
+          <img
+            src="src/weather_icons/sunny.png"
+            alt="sunny"
+            class="forecast-img"
+          />
+          <p class="forecast-temp">12°</p>
         </div>
       </div>
     </div>
