add styling to footer links

--- a/index.html
+++ b/index.html
@@ -130,11 +130,17 @@
     </div>
     <footer>
       <p>created by Jordan Renaud</p>
-      <a href="https://www.freepik.com/vectors/snow"
+      <a
+        class="github-link"
+        href="https://github.com/Jordan-Renaud/neumorphic_weather_app"
+        >Check out the code on github</a
+      >
+      <br />
+      <a class="resource-link" href="https://www.freepik.com/vectors/snow"
         >Snow vector created by creativepack - www.freepik.com</a
       >
       <br />
-      <a href="https://icons8.com/icon/111498/location"
+      <a class="resource-link" href="https://icons8.com/icon/111498/location"
         >Location icon by Icons8</a
       >
     </footer>
