add search functionality

--- a/index.html
+++ b/index.html
@@ -28,7 +28,11 @@
           <button class="get-location-button default-button">
             <img src="src/get_location_icon.png" alt="map icon" />
           </button>
-          <input type="text" placeholder="&#xF002; Search city" />
+          <input
+            class="search-city-input"
+            type="text"
+            placeholder="&#xF002; Search city"
+          />
         </div>
       </header>
 
