--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
     <title>Weather App</title>
   </head>
   <body>
+    <div class="main-box default-box loading-screen">
+      <h2 class="loading">Loading...</h2>
+    </div>
     <div class="main-box default-box">
       <header>
         <div class="where-when">
@@ -133,6 +136,7 @@
         </div>
       </div>
     </div>
+
     <footer>
       <p>created by Jordan Renaud</p>
       <a
