--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
         <div class="individual-forecast default-box">
           <p class="forecast-day">Wed</p>
           <img
-            src="src/weather_icons/sunny.png"
+            src="src/weather_icons/clear.png"
             alt="sunny"
             class="forecast-img"
           />
@@ -98,7 +98,7 @@
         <div class="individual-forecast default-box">
           <p class="forecast-day">Thu</p>
           <img
-            src="src/weather_icons/sunny.png"
+            src="src/weather_icons/clear.png"
             alt="sunny"
             class="forecast-img"
           />
@@ -108,7 +108,7 @@
         <div class="individual-forecast default-box">
           <p class="forecast-day">Fri</p>
           <img
-            src="src/weather_icons/sunny.png"
+            src="src/weather_icons/clear.png"
             alt="sunny"
             class="forecast-img"
           />
@@ -118,7 +118,7 @@
         <div class="individual-forecast default-box">
           <p class="forecast-day">Sat</p>
           <img
-            src="src/weather_icons/sunny.png"
+            src="src/weather_icons/clear.png"
             alt="sunny"
             class="forecast-img"
           />
@@ -128,7 +128,7 @@
         <div class="individual-forecast default-box">
           <p class="forecast-day">Sun</p>
           <img
-            src="src/weather_icons/sunny.png"
+            src="src/weather_icons/clear.png"
             alt="sunny"
             class="forecast-img"
           />
